// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterComponent should match the snapshot 1`] = `
<div
  id="root1"
>
  <h1>
    Counter 10
  </h1>
  <hr />
  <button
    class="btn btn-primary mx-1"
  >
    +1
  </button>
  <button
    class="btn btn-primary mx-1"
  >
    -1
  </button>
</div>
`;

exports[`CounterComponent should match the snapshot 2`] = `
<div
  id="root2"
>
  <h1>
    Counter 10
  </h1>
  <hr />
  <button
    class="btn btn-primary mx-1"
  >
    +1
  </button>
  <button
    class="btn btn-primary mx-1"
  >
    -1
  </button>
</div>
`;
